--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,7 +5,7 @@ defaults:
     - trainer: default_trainer.yaml
     - model: mnist_model.yaml
     - optimizer: adam.yaml
-    - datamodule: mnist_datamodule.yaml
+    - datamodule: DIV2K_datamodule.yaml
     - callbacks: default_callbacks.yaml  # set this to null if you don't want to use callbacks
     - logger: null  # set logger here or use command line (e.g. `python run.py logger=wandb`)
 
