--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,7 +3,7 @@
 # specify here default training configuration
 defaults:
     - trainer: default_trainer.yaml
-    - model: mnist_model.yaml
+    - model: liif.yaml
     - optimizer: adam.yaml
     - datamodule: DIV2K_datamodule.yaml
     - callbacks: default_callbacks.yaml  # set this to null if you don't want to use callbacks
@@ -20,11 +20,11 @@ defaults:
 # read more here: https://hydra.cc/docs/next/tutorials/basic/running_your_app/working_directory
 work_dir: ${hydra:runtime.cwd}
 
-# results_dir: /gdata/luoxin/lightning-hydra-template
-results_dir: ${work_dir}
+results_dir: /gdata/luoxin/lightning-hydra-template
+# results_dir: ${work_dir}
 
 # path to folder with data
-data_dir: ${results_dir}/data/
+data_dir: ${results_dir}/datasets/
 
 
 # use `python run.py debug=true` for easy debugging!
