--- a/configs/model/liif.yaml
+++ b/configs/model/liif.yaml
@@ -1,6 +1,8 @@
 _target_: src.models.liif.LIIF
 
 defaults:
+ - optimizer: adam.yaml
+ - lr_scheduler: multi_step_lr.yaml
  - architecture@encoder: edsr
  - architecture@inr: mlp
 
