--- a/configs/model/optimizer/adam.yaml
+++ b/configs/model/optimizer/adam.yaml
@@ -3,6 +3,6 @@ _target_: torch.optim.Adam
 lr: 0.0001
 eps: 1e-08
 weight_decay: 0
+betas: [0.9, 0.999]
 
-
-# betas: [ 0.9, 0.999 ]  # BUGGED :(
+_convert_: "partial"
