--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,21 @@
-# --------- pytorch --------- #
-torch>=1.7.1
-torchvision>=0.8.2
-torchaudio>=0.7.2
-pytorch-lightning>=1.2.2
+hydra-core==1.1.0.dev3
+hydra-colorlog==1.0.0
+hydra-optuna-sweeper==0.9.0rc2
+rich==9.13.0
+
+matplotlib==3.3.4
+tensorboard
+
+pandas==1.2.3
+Pillow==8.1.2
+
+scikit-image==0.18.1
+scikit-learn==0.24.1
+
+torch==1.8.0
+torchaudio==0.8.0
+torchvision==0.9.0
+pytorch-lightning>=1.2.4
 torchmetrics
 
-# --------- hydra --------- #
-hydra-core==1.1.0.dev3
-hydra_colorlog>=1.0.0
-hydra-optuna-sweeper>=0.9.0rc2
-# hydra-ray-launcher>=0.1.2
-
-# --------- loggers --------- #
-wandb>=0.10.20
-# neptune-client
-# comet_ml
-# mlflow
-# tensorboard
-
-# --------- linters --------- #
-pre-commit
-# isort
-# black
-# mypy
-
-# --------- others --------- #
-rich>=9.12.3
 python-dotenv
-dvc
-# scikit-learn
-# pandas
